--- a/main.css
+++ b/main.css
@@ -1,4 +1,7 @@
+body{
+  font-family: 'Roboto', sans-serif;
 
+}
 .navbar {
   box-shadow: 2px 2px 2px #b5b5b6;
   opacity: 10;
@@ -14,7 +17,7 @@
 
 .main-header {
   position: relative;
-  background:url(https://fintasport.github.io/img/finta3.jpg);
+  background:url(img/fondo-Uniformes.jpg);
   background-size: cover;
   min-height: 600px;
 }
@@ -28,7 +31,7 @@
 }
 
 #somos{
-  background: #3286ad;
+  background-image: linear-gradient(to bottom, #393a3a 0%, #000000 100%);
   top: 0;
   left: 0;
   bottom: 0;
@@ -36,7 +39,7 @@
   height: 100%;
 }
 
-#servicios{position: relative;
+#uniformes{position: relative;
   background:url(https://fintasport.github.io/img/fondo-estadio.jpg);
   background-size: cover;
   
@@ -48,18 +51,26 @@
 }
 #sublimaciones{
   position: relative;
-  background:url(https://fintasport.github.io/img/video-portada.jpg);
+  background:url(https://fintasport.github.io/img/a.jpg);
   background-size: cover;
-  min-height: 600px;
+  
   top: 0;
   left: 0;
   bottom: 0;
   width: 100%;
   height: 100%;
  }
+ #deportes{position: relative;
+  
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
 
 #contacto{
-  background: #0a053b;
+  background:#3f3f3f;
   top: 0;
   left: 0;
   bottom: 0;
