--- a/main.css
+++ b/main.css
@@ -1,14 +1,20 @@
 body{
+  margin: 0;
+  padding: 0;
   font-family: 'Roboto', sans-serif;
 
 }
-.navbar {
+.navbar{
+  
   box-shadow: 2px 2px 2px #b5b5b6;
   opacity: 10;
 }
+.dropdown-menu{
+  background-color: #6abfc8;
+}
 
 .navbar .nav-item .nav-link {
-  color: rgb(235, 228, 228);
+  color: rgb(253, 251, 251);
 }
 
 .navbar .navbar-brand {
@@ -31,7 +37,7 @@ body{
 }
 
 #somos{
-  background-image: linear-gradient(to bottom, #393a3a 0%, #000000 100%);
+  background-image: linear-gradient(to bottom, #3f3d3d 0%, #000000 100%);
   top: 0;
   left: 0;
   bottom: 0;
@@ -40,9 +46,8 @@ body{
 }
 
 #uniformes{position: relative;
-  background:url(https://fintasport.github.io/img/fondo-estadio.jpg);
+  background:url(http://fintasport.github.io/img/banner-deporte.jpg);
   background-size: cover;
-  
   top: 0;
   left: 0;
   bottom: 0;
@@ -70,7 +75,7 @@ body{
 }
 
 #contacto{
-  background:#3f3f3f;
+  background-image: linear-gradient(to bottom, #13349e 0%, #0a0b2b 100%);
   top: 0;
   left: 0;
   bottom: 0;
@@ -79,7 +84,7 @@ body{
 }
 
 #copyrigth {
-  background: rgb(6, 1, 27);
+  background: rgb(19, 27, 48);
   top: 0;
   left: 0;
   bottom: 0;
@@ -89,3 +94,4 @@ body{
 .card .card-body .imagen{
 border: #1dd323;
 }
+
