--- a/main.css
+++ b/main.css
@@ -1,24 +1,27 @@
 body{
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
-
+  font-family: 'arial';
+   
 }
 .navbar{
-  
+  background-color: #3d3b3b;
   box-shadow: 2px 2px 2px #b5b5b6;
   opacity: 10;
 }
 .dropdown-menu{
   background-color: #6abfc8;
+  font-size: smaller;
 }
 
 .navbar .nav-item .nav-link {
   color: rgb(253, 251, 251);
+  font-size: smaller;
 }
 
 .navbar .navbar-brand {
   color: rgb(235, 228, 228);
+  font-size: smaller;
 }
 
 .main-header {
@@ -37,16 +40,55 @@ body{
 }
 
 #somos{
-  background-image: linear-gradient(to bottom, #3f3d3d 0%, #000000 100%);
+  background-image: linear-gradient(to bottom, #069ec4 0%, #069ec4 100%);
   top: 0;
   left: 0;
   bottom: 0;
   width: 100%;
   height: 100%;
 }
-
+#uniformes-deportivos{
+  background-image: linear-gradient(to bottom, #3b3b3b 0%, #3b3b3b 100%);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+#articulos-deportivos{
+  background-image: linear-gradient(to bottom, #069ec4 0%, #069ec4 100%);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+#sublimacion-textil{
+  background-image: linear-gradient(to bottom, #3b3b3b 0%, #3b3b3b 100%);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+#banderas-banderines{
+  background-image: linear-gradient(to bottom, #069ec4 0%, #069ec4 100%);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+#...{
+  background-image: linear-gradient(to bottom, #3b3b3b 0%, #3b3b3b 100%);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
 #uniformes{position: relative;
-  background:url(http://fintasport.github.io/img/banner-deporte.jpg);
+  background:url(http://localhost/fintasport/img/banner-deporte.jpg);
   background-size: cover;
   top: 0;
   left: 0;
@@ -75,7 +117,7 @@ body{
 }
 
 #contacto{
-  background-image: linear-gradient(to bottom, #13349e 0%, #0a0b2b 100%);
+  background-image: linear-gradient(to bottom, #3b3b3b 0%, #3b3b3b 100%);
   top: 0;
   left: 0;
   bottom: 0;
@@ -84,7 +126,7 @@ body{
 }
 
 #copyrigth {
-  background: rgb(19, 27, 48);
+  background: rgb(19, 18, 18);
   top: 0;
   left: 0;
   bottom: 0;
@@ -94,4 +136,3 @@ body{
 .card .card-body .imagen{
 border: #1dd323;
 }
-
